# gameshow-study

./: README.md  pyproject.toml
legacy/: NOTICE  README.md  gameshow.html  index.html
